--- a/chain/pallets/product-registry/Cargo.toml
+++ b/chain/pallets/product-registry/Cargo.toml
@@ -12,7 +12,7 @@ license = 'Unlicense'
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.4'
+version = '2.0.0'
 
 [dependencies.timestamp]
 default_features = false
@@ -22,8 +22,10 @@ version = '3.0.0'
 [dependencies]
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
+sp-std = { default-features = false, version = '3.0.0' }
 
 [dev-dependencies]
+serde = { version = "1.0.119"}
 sp-core = { default-features = false, version = '3.0.0' }
 sp-io = { default-features = false, version = '3.0.0' }
 sp-runtime = { default-features = false, version = '3.0.0' }
@@ -35,4 +37,5 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'timestamp/std',
+    'sp-std/std',
 ]
