--- a/chain/pallets/product-tracking/Cargo.toml
+++ b/chain/pallets/product-tracking/Cargo.toml
@@ -15,7 +15,7 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.4'
+version = '2.0.0'
 
 [dependencies.fixed]
 default-features = false
@@ -42,6 +42,7 @@ sp-io = { default-features = false, version = '3.0.0' }
 sp-runtime = { default-features = false, version = '3.0.0' }
 
 [dev-dependencies]
+serde = { version = "1.0.119"}
 hex =  { default-features = false, version = '0.4.2' }
 
 [features]
