--- a/chain/pallets/registrar/Cargo.toml
+++ b/chain/pallets/registrar/Cargo.toml
@@ -12,7 +12,7 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.4'
+version = '2.0.0'
 
 [dependencies.did]
 default-features = false
@@ -29,8 +29,10 @@ sp-runtime = { default-features = false, version = '3.0.0' }
 sp-std = { default-features = false, version = '3.0.0'}
 
 [dev-dependencies]
+serde = { version = "1.0.119"}
 sp-core = { default-features = false, version = '3.0.0' }
 sp-io = { default-features = false, version = '3.0.0' }
+sp-runtime = { default-features = false, version = '3.0.0' }
 
 [features]
 default = ['std']
