--- a/chain/runtime/Cargo.toml
+++ b/chain/runtime/Cargo.toml
@@ -60,9 +60,9 @@ pallet-did = { default_features = false, version = '3.0.0', git = 'https://githu
 
 [dependencies.rbac]
 default-features = false
-git = 'https://github.com/stunti/substrate-rbac'
+git = 'https://github.com/zacksleo/substrate-rbac'
 package = 'substrate-rbac'
-branch = 'enterprise-sample'
+branch = 'master'
 
 [dependencies.product-registry]
 default-features = false
